--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <h1>
-      Hello World!
-    </h1>
+    <section>
+      <h1>
+        Hello World!
+      </h1>
+    </section>
+    
 
     <!--
 
